--- a/Phase2/ETLprocess.ipynb
+++ b/Phase2/ETLprocess.ipynb
@@ -26,56 +26,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        id          name       rank     generation evolves_from     type1  \\\n",
-      "0        1     bulbasaur   ordinary   generation-i      nothing     grass   \n",
-      "1        2       ivysaur   ordinary   generation-i    bulbasaur     grass   \n",
-      "2        3      venusaur   ordinary   generation-i      ivysaur     grass   \n",
-      "3        4    charmander   ordinary   generation-i      nothing      fire   \n",
-      "4        5    charmeleon   ordinary   generation-i   charmander      fire   \n",
-      "...    ...           ...        ...            ...          ...       ...   \n",
-      "1020  1021   raging-bolt   ordinary  generation-ix      nothing  electric   \n",
-      "1021  1022  iron-boulder   ordinary  generation-ix      nothing      rock   \n",
-      "1022  1023    iron-crown   ordinary  generation-ix      nothing     steel   \n",
-      "1023  1024     terapagos  legendary  generation-ix      nothing    normal   \n",
-      "1024  1025     pecharunt   mythical  generation-ix      nothing    poison   \n",
-      "\n",
-      "        type2   hp  atk  def  spatk  spdef  speed  total  height  weight  \\\n",
-      "0      poison   45   49   49     65     65     45    318       7      69   \n",
-      "1      poison   60   62   63     80     80     60    405      10     130   \n",
-      "2      poison   80   82   83    100    100     80    525      20    1000   \n",
-      "3         NaN   39   52   43     60     50     65    309       6      85   \n",
-      "4         NaN   58   64   58     80     65     80    405      11     190   \n",
-      "...       ...  ...  ...  ...    ...    ...    ...    ...     ...     ...   \n",
-      "1020   dragon  125   73   91    137     89     75    590      52    4800   \n",
-      "1021  psychic   90  120   80     68    108    124    590      15    1625   \n",
-      "1022  psychic   90   72  100    122    108     98    590      16    1560   \n",
-      "1023      NaN   90   65   85     65     85     60    450       2      65   \n",
-      "1024    ghost   88   88  160     88     88     88    600       3       3   \n",
-      "\n",
-      "                  abilities                                               desc  \n",
-      "0     overgrow chlorophyll   A strange seed was planted on its back at birt...  \n",
-      "1     overgrow chlorophyll   When the bulb on its back grows large, it appe...  \n",
-      "2     overgrow chlorophyll   The plant blooms when it is absorbing solar en...  \n",
-      "3        blaze solar-power   Obviously prefers hot places. When it rains, s...  \n",
-      "4        blaze solar-power   When it swings its burning tail, it elevates t...  \n",
-      "...                     ...                                                ...  \n",
-      "1020        protosynthesis                                       Not Available  \n",
-      "1021           quark-drive                                       Not Available  \n",
-      "1022           quark-drive                                       Not Available  \n",
-      "1023            tera-shift                                       Not Available  \n",
-      "1024      poison-puppeteer                                       Not Available  \n",
-      "\n",
-      "[1025 rows x 18 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Read base dataset in a pandas data frame and print\n",
     "base_pokemon_df = pd.read_csv(\"data/base_df_pokemon.csv\")\n",
@@ -84,36 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Now we verify the types pandas assigned to our columns\n",
-      "id               int64\n",
-      "name            object\n",
-      "rank            object\n",
-      "generation      object\n",
-      "evolves_from    object\n",
-      "type1           object\n",
-      "type2           object\n",
-      "hp               int64\n",
-      "atk              int64\n",
-      "def              int64\n",
-      "spatk            int64\n",
-      "spdef            int64\n",
-      "speed            int64\n",
-      "total            int64\n",
-      "height           int64\n",
-      "weight           int64\n",
-      "abilities       object\n",
-      "desc            object\n",
-      "dtype: object\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Now we verify the types pandas assigned to our columns\")\n",
     "print(base_pokemon_df.dtypes)\n",
@@ -141,7 +67,80 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#create needed columns for transformation\n",
+    "print(\"Creating DexEntry Key column...\")\n",
+    "base_pokemon_df[\"dexEntry key\"] =  base_pokemon_df[\"id\"].astype(str)+base_pokemon_df[\"generation\"].str.replace(\"generation\",\"\")\n",
+    "\n",
+    "print(\"Creating ContextInfo key column...\")\n",
+    "base_pokemon_df[\"contextInfo key\"] = base_pokemon_df[\"rank\"]+base_pokemon_df[\"generation\"].str.replace(\"generation\",\"\")\n",
+    "#print(base_pokemon_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We establish dataframes that match our model's dimensions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Pokedex Entry dimension\\n\")\n",
+    "\n",
+    "pkd_entry_dim_cols = [\"dexEntry key\",\"id\",\"name\",\"evolves_from\",\"type1\",\"type2\",\"height\",\"weight\",\"abilities\"]\n",
+    "pkd_entry_df = base_pokemon_df[pkd_entry_dim_cols]\n",
+    "\n",
+    "print(\"Renaming the columns to match our model...\")\n",
+    "pkd_entry_cols_names = {\"id\": \"pokedex Id\", \"height\":\"height(cm)\", \"weight\" : \"weight(kg)\"}\n",
+    "pkd_entry_df= pkd_entry_df.rename(columns=pkd_entry_cols_names, errors=\"raise\")\n",
+    "\n",
+    "print(\"Converting height and weight from decameter and dekagram to centimeters and kilogram...\")\n",
+    "pkd_entry_df[\"height(cm)\"] *= 10\n",
+    "pkd_entry_df[\"weight(kg)\"] *= 0.1\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "print(pkd_entry_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"ContextInfo dimension\\n\")\n",
+    "cinfo_dim_cols = [\"contextInfo key\",\"rank\",\"generation\"]\n",
+    "cinfo_df = base_pokemon_df[cinfo_dim_cols]\n",
+    "\n",
+    "print(\"Dropping duplicates...\")\n",
+    "cinfo_df.drop_duplicates(subset=[\"contextInfo key\"],inplace=True)\n",
+    "\n",
+    "print(\"Reseting indexes after removing duplicates...\")\n",
+    "cinfo_df.reset_index(drop=True,inplace=True)\n",
+    "print(cinfo_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Fact table\\n\")\n",
+    "fact_table_cols = [\"dexEntry key\",\"contextInfo key\",\"hp\", \"atk\", \"def\", \"spatk\",\"spdef\",\"speed\",\"total\"]\n",
+    "fact_table_df = base_pokemon_df[fact_table_cols]\n",
+    "\n",
+    "print(\"Renaming columns to match our model...\")\n",
+    "fact_cols_names = {\"hp\": \"Health Points\", \"atk\":\"Attack\", \"def\" : \"Defense\", \"spatk\":\"Special Attack\",\"spdef\":\"Special Defense\", \"speed\": \"Speed\", \"total\":\"Total\"}\n",
+    "fact_table_df= fact_table_df.rename(columns=fact_cols_names, errors=\"raise\")\n",
+    "\n",
+    "print(fact_table_df)"
+   ]
   },
   {
    "cell_type": "markdown",
