adding check for null values in fact table

--- a/Phase2/ETLprocess.ipynb
+++ b/Phase2/ETLprocess.ipynb
@@ -81,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We establish dataframes that match our model's dimensions"
+    "We create dataframes that match our model's dimensions"
    ]
   },
   {
@@ -126,6 +126,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We create a dataframe for our fact table"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -139,7 +146,20 @@
     "fact_cols_names = {\"hp\": \"Health Points\", \"atk\":\"Attack\", \"def\" : \"Defense\", \"spatk\":\"Special Attack\",\"spdef\":\"Special Defense\", \"speed\": \"Speed\", \"total\":\"Total\"}\n",
     "fact_table_df= fact_table_df.rename(columns=fact_cols_names, errors=\"raise\")\n",
     "\n",
+    "print(\"Checking for null values...\")\n",
+    "print(fact_table_df.isnull().sum())\n",
+    "\n",
+    "print(\"\\n\")\n",
     "print(fact_table_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If we want to add data from the datasets in data\\extended datasets we can do that here"
    ]
   },
   {
@@ -147,6 +167,13 @@
    "metadata": {},
    "source": [
     "### 3. Loading"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Loading the data to our DBMS "
    ]
   },
   {
