--- a/Phase2/ETLprocess.ipynb
+++ b/Phase2/ETLprocess.ipynb
@@ -178,10 +178,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: psycopg2 in c:\\python310\\lib\\site-packages (2.9.9)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Ignoring invalid distribution -ip (c:\\python310\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -ip (c:\\python310\\lib\\site-packages)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#pip install and imports here\n",
+    "%pip install psycopg2\n",
+    "import psycopg2\n",
+    "import configparser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Retrieving configuration...\n",
+      "Connecting to the database...\n",
+      "'postgres'\n",
+      "Failed to connect to the database\n",
+      "\n",
+      "psycopg2 ERROR:  on line number: 9\n",
+      "psycopg2 traceback: <traceback object at 0x0000015166312280> -- type: <class 'psycopg2.OperationalError'>\n",
+      "\n",
+      "extensions.Diagnostics: <psycopg2.extensions.Diagnostics object at 0x0000015167A35510>\n",
+      "pgerror: None\n",
+      "pgcode: None \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Retrieving configuration...\")\n",
+    "config = configparser.ConfigParser()\n",
+    "config.read('settings.ini')\n",
+    "db_config = config['DB CONFIGURATION']\n",
+    "\n",
+    "print(\"Connecting to the database...\")\n",
+    "\n",
+    "try:\n",
+    "    conn = psycopg2.connect(\n",
+    "        dbname = db_config['DB_NAME'],\n",
+    "        host = db_config['HOST'],\n",
+    "        user = db_config['USER'],\n",
+    "        password = db_config['PASSWORD'],\n",
+    "        port = db_config['PORT']\n",
+    "    )\n",
+    "    cursor = conn.cursor()\n",
+    "except psycopg2.OperationalError as e:\n",
+    "    #print(\"Error connecting to the database!\\n{0}\").format(e)\n",
+    "    print(\"Failed to connect to the database\")\n",
+    "    import sys\n",
+    "    err_type, err_obj, traceback = sys.exc_info()\n",
+    "\n",
+    "    # get the line number when exception occured\n",
+    "    line_num = traceback.tb_lineno\n",
+    "    print (\"\\npsycopg2 ERROR:\", e, \"on line number:\", line_num)\n",
+    "    print (\"psycopg2 traceback:\", traceback, \"-- type:\", err_type)\n",
+    "\n",
+    "    # psycopg2 extensions.Diagnostics object attribute\n",
+    "    print (\"\\nextensions.Diagnostics:\", e.diag)\n",
+    "\n",
+    "    # print the pgcode and pgerror exceptions\n",
+    "    print (\"pgerror:\", e.pgerror)\n",
+    "    print (\"pgcode:\", e.pgcode, \"\\n\")\n"
+   ]
   }
  ],
  "metadata": {
