--- a/Phase2/ETLprocess.ipynb
+++ b/Phase2/ETLprocess.ipynb
@@ -178,14 +178,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: psycopg2 in c:\\python310\\lib\\site-packages (2.9.9)\n",
+      "Requirement already satisfied: psycopg2-binary in c:\\python310\\lib\\site-packages (2.9.9)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
@@ -200,14 +200,18 @@
    ],
    "source": [
     "#pip install and imports here\n",
-    "%pip install psycopg2\n",
+    "%pip install psycopg2-binary\n",
+    "\n",
     "import psycopg2\n",
-    "import configparser"
+    "import psycopg\n",
+    "import configparser\n",
+    "import socket\n",
+    "#socket.getaddrinfo('localhost', 8080)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -215,17 +219,19 @@
      "output_type": "stream",
      "text": [
       "Retrieving configuration...\n",
-      "Connecting to the database...\n",
-      "'postgres'\n",
-      "Failed to connect to the database\n",
-      "\n",
-      "psycopg2 ERROR:  on line number: 9\n",
-      "psycopg2 traceback: <traceback object at 0x0000015166312280> -- type: <class 'psycopg2.OperationalError'>\n",
-      "\n",
-      "extensions.Diagnostics: <psycopg2.extensions.Diagnostics object at 0x0000015167A35510>\n",
-      "pgerror: None\n",
-      "pgcode: None \n",
-      "\n"
+      "Connecting to the database...\n"
+     ]
+    },
+    {
+     "ename": "OperationalError",
+     "evalue": "connection to server at \"localhost\" (::1), port 5432 failed: FATAL:  password authentication failed for user \"postgres\"\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 18\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m      9\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;124;03m    conn = psycopg.connect(\u001b[39;00m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;124;03m        dbname = db_config['DB_NAME'],\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;124;03m    )\u001b[39;00m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m---> 18\u001b[0m     conn \u001b[38;5;241m=\u001b[39m \u001b[43mpsycopg2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconnect\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     19\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdbname=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mdb_config\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mDB_NAME\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\n\u001b[0;32m     20\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m host=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mdb_config\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mHOST\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\n\u001b[0;32m     21\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m user=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mdb_config\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mUSER\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\n\u001b[0;32m     22\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m password=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mdb_config\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mPASSWORD\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\n\u001b[0;32m     23\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m port=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mdb_config\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mPORT\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[0;32m     24\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     25\u001b[0m     cursor \u001b[38;5;241m=\u001b[39m conn\u001b[38;5;241m.\u001b[39mcursor()\n\u001b[0;32m     26\u001b[0m     \u001b[38;5;28mprint\u001b[39m(conn)\n",
+      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\psycopg2\\__init__.py:122\u001b[0m, in \u001b[0;36mconnect\u001b[1;34m(dsn, connection_factory, cursor_factory, **kwargs)\u001b[0m\n\u001b[0;32m    119\u001b[0m     kwasync[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124masync_\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m kwargs\u001b[38;5;241m.\u001b[39mpop(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124masync_\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m    121\u001b[0m dsn \u001b[38;5;241m=\u001b[39m _ext\u001b[38;5;241m.\u001b[39mmake_dsn(dsn, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m--> 122\u001b[0m conn \u001b[38;5;241m=\u001b[39m _connect(dsn, connection_factory\u001b[38;5;241m=\u001b[39mconnection_factory, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwasync)\n\u001b[0;32m    123\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m cursor_factory \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    124\u001b[0m     conn\u001b[38;5;241m.\u001b[39mcursor_factory \u001b[38;5;241m=\u001b[39m cursor_factory\n",
+      "\u001b[1;31mOperationalError\u001b[0m: connection to server at \"localhost\" (::1), port 5432 failed: FATAL:  password authentication failed for user \"postgres\"\n"
      ]
     }
    ],
@@ -238,31 +244,34 @@
     "print(\"Connecting to the database...\")\n",
     "\n",
     "try:\n",
-    "    conn = psycopg2.connect(\n",
+    "    \"\"\"\n",
+    "    conn = psycopg.connect(\n",
     "        dbname = db_config['DB_NAME'],\n",
     "        host = db_config['HOST'],\n",
     "        user = db_config['USER'],\n",
     "        password = db_config['PASSWORD'],\n",
     "        port = db_config['PORT']\n",
     "    )\n",
+    "    \"\"\"\n",
+    "    conn = psycopg2.connect(\n",
+    "        \"dbname=\"+ db_config['DB_NAME']+\n",
+    "        \" host=\"+db_config['HOST']+\n",
+    "        \" user=\"+ db_config['USER']+\n",
+    "        \" password=\"+ db_config['PASSWORD']+\n",
+    "        \" port=\"+db_config['PORT']\n",
+    "    )\n",
     "    cursor = conn.cursor()\n",
-    "except psycopg2.OperationalError as e:\n",
+    "    print(conn)\n",
+    "    print(cursor)\n",
+    "    print(\"Connected to the database !\")\n",
+    "except psycopg.OperationalError as e:\n",
     "    #print(\"Error connecting to the database!\\n{0}\").format(e)\n",
     "    print(\"Failed to connect to the database\")\n",
     "    import sys\n",
     "    err_type, err_obj, traceback = sys.exc_info()\n",
-    "\n",
-    "    # get the line number when exception occured\n",
-    "    line_num = traceback.tb_lineno\n",
-    "    print (\"\\npsycopg2 ERROR:\", e, \"on line number:\", line_num)\n",
-    "    print (\"psycopg2 traceback:\", traceback, \"-- type:\", err_type)\n",
-    "\n",
-    "    # psycopg2 extensions.Diagnostics object attribute\n",
-    "    print (\"\\nextensions.Diagnostics:\", e.diag)\n",
-    "\n",
-    "    # print the pgcode and pgerror exceptions\n",
-    "    print (\"pgerror:\", e.pgerror)\n",
-    "    print (\"pgcode:\", e.pgcode, \"\\n\")\n"
+    "    print(\"\\npsycopg error:\",e)\n",
+    "    print (\"\\npsycopg2 traceback:\", traceback, \"-- type:\", err_type)\n",
+    "    print (\"\\nextensions.Diagnostics:\", e.diag)\n"
    ]
   }
  ],
