working sql fetch

--- a/Phase2/ETLprocess.ipynb
+++ b/Phase2/ETLprocess.ipynb
@@ -358,11 +358,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys.exit(1)\n",
+    "\n",
     "\n",
     "cinfo_df.to_sql('ContextInfo_Dimension',conn2,if_exists='append')\n",
+    "\n",
     "pkd_entry_df.to_sql('PokedexEntry_Dimension',conn2,if_exists='append')\n",
     "fact_table_df.to_sql('Fact_Table',conn2,if_exists='append')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cursor.execute('SELECT * FROM \"ContextInfo_Dimension\";')\n",
+    "print(cursor.fetchall())\n",
+    "cursor.execute('SELECT * FROM \"PokedexEntry_Dimension\";')\n",
+    "print(cursor.fetchall())\n",
+    "cursor.execute('SELECT * FROM \"Fact_Table\";')\n",
+    "print(cursor.fetchall())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cursor.execute('DROP TABLE IF EXISTS \"ContextInfo_Dimension\";')\n",
+    "cursor.execute('DROP TABLE IF EXISTS \"PokedexEntry_Dimension\";')\n",
+    "cursor.execute('DROP TABLE IF EXISTS \"Fact_Table\";')"
    ]
   },
   {
@@ -406,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
