OLAP Queries part
Drill down, roll up, slice and dice queries

--- a/Phase2/ETLprocess.ipynb
+++ b/Phase2/ETLprocess.ipynb
@@ -192,6 +192,94 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### PHASE 3 OLAP queries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Rollup "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Roll up by ContextInfoKey\n",
+    "rollup_df = fact_table_df.groupby('ContextInfoKey').size().reset_index(name='count')\n",
+    "print(rollup_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Drill down"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_tmp = pd.merge(fact_table_df, cinfo_df, on='ContextInfoKey', how='left')\n",
+    "df_fin = pd.merge(df_tmp, pkd_entry_df, on='DexEntryKey', how='left')\n",
+    "print(df_fin)\n",
+    "drill_down_df = pd.DataFrame()\n",
+    "\n",
+    "# Drill down by generation\n",
+    "for generation, gen_group in df_fin.groupby('generation'):\n",
+    "    gen_count = len(gen_group)\n",
+    "    gen_group['generation_count'] = gen_count\n",
+    "    drill_down_df = pd.concat([drill_down_df, gen_group[['generation', 'generation_count']]])\n",
+    "\n",
+    "print(drill_down_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Slice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Slicing the water type pokemon\n",
+    "slice_df = df_fin.loc[df_fin['type1'] == 'water'].reset_index()\n",
+    "print(slice_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dice the pokemon have both water and poison type\n",
+    "dice_df = df_fin.loc[(df_fin['type1'] == 'water') & (df_fin['type2'] == 'poison')].reset_index()\n",
+    "print(dice_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 3. Loading"
    ]
   },
@@ -392,6 +480,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -432,7 +527,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
