--- a/Phase2/ETLprocess.ipynb
+++ b/Phase2/ETLprocess.ipynb
@@ -228,7 +228,6 @@
    "source": [
     "df_tmp = pd.merge(fact_table_df, cinfo_df, on='ContextInfoKey', how='left')\n",
     "df_fin = pd.merge(df_tmp, pkd_entry_df, on='DexEntryKey', how='left')\n",
-    "print(df_fin)\n",
     "drill_down_df = pd.DataFrame()\n",
     "\n",
     "# Drill down by generation\n",
@@ -236,7 +235,7 @@
     "    gen_count = len(gen_group)\n",
     "    gen_group['generation_count'] = gen_count\n",
     "    drill_down_df = pd.concat([drill_down_df, gen_group[['generation', 'generation_count']]])\n",
-    "\n",
+    "drill_down_df.drop_duplicates(subset=['generation'], inplace= True)\n",
     "print(drill_down_df)"
    ]
   },
@@ -280,8 +279,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Combining OLAP operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_tmp = pd.merge(fact_table_df, cinfo_df, on='ContextInfoKey', how='left')\n",
+    "df_fin = pd.merge(df_tmp, pkd_entry_df, on='DexEntryKey', how='left')\n",
+    "print(df_fin)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Query 1:\n",
+    "# Query the fire pokemons in generation i Total attribute\n",
+    "generation1_df = df_fin.loc[df_fin['generation'] == 'generation-i']\n",
+    "cqueries_df_1 = generation1_df.loc[df_fin['type1'] == 'fire']\n",
+    "cqueries_df_1 = cqueries_df_1[['generation', 'name', 'type1', 'TOTAL']].reset_index()\n",
+    "print(cqueries_df_1)\n",
+    "\n",
+    "# Query 2:\n",
+    "# Query the water pokemons that have variants\n",
+    "cqueries_df_2 = df_fin.loc[(df_fin['type1'] == 'water') & (df_fin['is_there_variant'] == True)]\n",
+    "cqueries_df_2 = cqueries_df_2[['generation', 'name', 'type1', 'is_there_variant']].reset_index()\n",
+    "print(cqueries_df_2)\n",
+    "\n",
+    "# Query 3:\n",
+    "# Query the total number of grass pokemons in each generation\n",
+    "cqueries_df_3 = pd.DataFrame()\n",
+    "for generation, gen_group in df_fin.groupby('generation'):\n",
+    "    grass_df = gen_group.loc[df_fin['type1'] == 'grass'].copy()\n",
+    "    grass_count = len(grass_df)\n",
+    "    grass_df['count_grass'] = grass_count\n",
+    "    cqueries_df_3 = pd.concat([cqueries_df_3,grass_df[['generation','count_grass']]])\n",
+    "    cqueries_df_3.drop_duplicates(subset=['generation'], inplace= True)\n",
+    "print(cqueries_df_3) \n",
+    "\n",
+    "\n",
+    "# Query 4:\n",
+    "# Query the slice of every legendary rank pokemon in generation in each generation\n",
+    "cqueries_df_4 = pd.DataFrame()\n",
+    "for generation, gen_group in df_fin.groupby('generation'):\n",
+    "    legendary = gen_group.loc[df_fin['rank'] == 'legendary'].copy()\n",
+    "    cqueries_df_4 = pd.concat([cqueries_df_4,legendary])\n",
+    "print(cqueries_df_4) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 3. Loading"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
