--- a/Phase2/ETLprocess.ipynb
+++ b/Phase2/ETLprocess.ipynb
@@ -509,9 +509,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "\n",
     "cinfo_df.to_sql('ContextInfo_Dimension',conn2,if_exists='append')\n",
-    "\n",
     "pkd_entry_df.to_sql('PokedexEntry_Dimension',conn2,if_exists='append')\n",
     "fact_table_df.to_sql('Fact_Table',conn2,if_exists='append')"
    ]
@@ -527,7 +525,7 @@
     "cursor.execute('SELECT * FROM \"PokedexEntry_Dimension\";')\n",
     "print(cursor.fetchall())\n",
     "cursor.execute('SELECT * FROM \"Fact_Table\";')\n",
-    "print(cursor.fetchall())\n"
+    "print(cursor.fetchall())"
    ]
   },
   {
@@ -540,13 +538,6 @@
     "cursor.execute('DROP TABLE IF EXISTS \"PokedexEntry_Dimension\";')\n",
     "cursor.execute('DROP TABLE IF EXISTS \"Fact_Table\";')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
