Decouple ETL and OLAP

--- a/Phase2/ETLprocess.ipynb
+++ b/Phase2/ETLprocess.ipynb
@@ -31,7 +31,7 @@
    "outputs": [],
    "source": [
     "# Read base dataset in a pandas data frame and print\n",
-    "base_pokemon_df = pd.read_csv(\"data/base_df_pokemon.csv\")\n",
+    "base_pokemon_df = pd.read_csv(\"../data/base_df_pokemon.csv\")\n",
     "print(base_pokemon_df)"
    ]
   },
@@ -116,7 +116,7 @@
    "source": [
     "print(\"isVariant column\\n\")\n",
     "\n",
-    "df_variant = pd.read_csv('data/extended datasets/bridge_pokemon_pokemon_HAS_VARIANT.csv')\n",
+    "df_variant = pd.read_csv('../data/extended datasets/bridge_pokemon_pokemon_HAS_VARIANT.csv')\n",
     "unique_variant = df_variant['Non-Variant Pkm Name'].unique()\n",
     "unique_variant_lower = list(map(str.lower, unique_variant))\n",
     "print(unique_variant_lower)\n"
@@ -192,158 +192,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### PHASE 3 OLAP queries"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Rollup "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Roll up by ContextInfoKey\n",
-    "rollup_df = fact_table_df.groupby('ContextInfoKey').size().reset_index(name='count')\n",
-    "print(rollup_df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Drill down"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_tmp = pd.merge(fact_table_df, cinfo_df, on='ContextInfoKey', how='left')\n",
-    "df_fin = pd.merge(df_tmp, pkd_entry_df, on='DexEntryKey', how='left')\n",
-    "drill_down_df = pd.DataFrame()\n",
-    "\n",
-    "# Drill down by generation\n",
-    "for generation, gen_group in df_fin.groupby('generation'):\n",
-    "    gen_count = len(gen_group)\n",
-    "    gen_group['generation_count'] = gen_count\n",
-    "    drill_down_df = pd.concat([drill_down_df, gen_group[['generation', 'generation_count']]])\n",
-    "drill_down_df.drop_duplicates(subset=['generation'], inplace= True)\n",
-    "print(drill_down_df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Slice"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Slicing the water type pokemon\n",
-    "slice_df = df_fin.loc[df_fin['type1'] == 'water'].reset_index()\n",
-    "print(slice_df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Dice"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Dice the pokemon have both water and poison type\n",
-    "dice_df = df_fin.loc[(df_fin['type1'] == 'water') & (df_fin['type2'] == 'poison')].reset_index()\n",
-    "print(dice_df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Combining OLAP operations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_tmp = pd.merge(fact_table_df, cinfo_df, on='ContextInfoKey', how='left')\n",
-    "df_fin = pd.merge(df_tmp, pkd_entry_df, on='DexEntryKey', how='left')\n",
-    "print(df_fin)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Query 1:\n",
-    "# Query the fire pokemons in generation i Total attribute\n",
-    "generation1_df = df_fin.loc[df_fin['generation'] == 'generation-i']\n",
-    "cqueries_df_1 = generation1_df.loc[df_fin['type1'] == 'fire']\n",
-    "cqueries_df_1 = cqueries_df_1[['generation', 'name', 'type1', 'TOTAL']].reset_index()\n",
-    "print(cqueries_df_1)\n",
-    "\n",
-    "# Query 2:\n",
-    "# Query the water pokemons that have variants\n",
-    "cqueries_df_2 = df_fin.loc[(df_fin['type1'] == 'water') & (df_fin['is_there_variant'] == True)]\n",
-    "cqueries_df_2 = cqueries_df_2[['generation', 'name', 'type1', 'is_there_variant']].reset_index()\n",
-    "print(cqueries_df_2)\n",
-    "\n",
-    "# Query 3:\n",
-    "# Query the total number of grass pokemons in each generation\n",
-    "cqueries_df_3 = pd.DataFrame()\n",
-    "for generation, gen_group in df_fin.groupby('generation'):\n",
-    "    grass_df = gen_group.loc[df_fin['type1'] == 'grass'].copy()\n",
-    "    grass_count = len(grass_df)\n",
-    "    grass_df['count_grass'] = grass_count\n",
-    "    cqueries_df_3 = pd.concat([cqueries_df_3,grass_df[['generation','count_grass']]])\n",
-    "    cqueries_df_3.drop_duplicates(subset=['generation'], inplace= True)\n",
-    "print(cqueries_df_3) \n",
-    "\n",
-    "\n",
-    "# Query 4:\n",
-    "# Query the slice of every legendary rank pokemon in generation in each generation\n",
-    "cqueries_df_4 = pd.DataFrame()\n",
-    "for generation, gen_group in df_fin.groupby('generation'):\n",
-    "    legendary = gen_group.loc[df_fin['rank'] == 'legendary'].copy()\n",
-    "    cqueries_df_4 = pd.concat([cqueries_df_4,legendary])\n",
-    "print(cqueries_df_4) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 3. Loading"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -375,9 +225,9 @@
    "source": [
     "print(\"Retrieving configuration...\")\n",
     "config = configparser.ConfigParser()\n",
-    "config.read('settings.ini')\n",
+    "config.read('../settings.ini')\n",
     "db_config = config['DB CONFIGURATION']\n",
-    "\n",
+    "print(db_config)\n",
     "print(\"Connecting to the database...\")\n",
     "\n",
     "try:\n",
@@ -509,9 +359,11 @@
    "outputs": [],
    "source": [
     "\n",
-    "cinfo_df.to_sql('ContextInfo_Dimension',conn2,if_exists='append')\n",
-    "pkd_entry_df.to_sql('PokedexEntry_Dimension',conn2,if_exists='append')\n",
-    "fact_table_df.to_sql('Fact_Table',conn2,if_exists='append')"
+    "\n",
+    "cinfo_df.to_sql('ContextInfo_Dimension',conn2,if_exists='replace')\n",
+    "\n",
+    "pkd_entry_df.to_sql('PokedexEntry_Dimension',conn2,if_exists='replace')\n",
+    "fact_table_df.to_sql('Fact_Table',conn2,if_exists='replace')"
    ]
   },
   {
@@ -525,7 +377,7 @@
     "cursor.execute('SELECT * FROM \"PokedexEntry_Dimension\";')\n",
     "print(cursor.fetchall())\n",
     "cursor.execute('SELECT * FROM \"Fact_Table\";')\n",
-    "print(cursor.fetchall())"
+    "print(cursor.fetchall())\n"
    ]
   },
   {
@@ -534,9 +386,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cursor.execute('DROP TABLE IF EXISTS \"ContextInfo_Dimension\";')\n",
-    "cursor.execute('DROP TABLE IF EXISTS \"PokedexEntry_Dimension\";')\n",
-    "cursor.execute('DROP TABLE IF EXISTS \"Fact_Table\";')"
+    "#cursor.execute('DROP TABLE IF EXISTS \"ContextInfo_Dimension\";')\n",
+    "#cursor.execute('DROP TABLE IF EXISTS \"PokedexEntry_Dimension\";')\n",
+    "#cursor.execute('DROP TABLE IF EXISTS \"Fact_Table\";')"
    ]
   },
   {
@@ -580,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
