done cleaning up competitive df

--- a/Phase4/DataMining.ipynb
+++ b/Phase4/DataMining.ipynb
@@ -20,6 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#pip install and imports here\n",
+    "#%pip install scikit-learn \n",
+    "#%pip install matplotlib\n",
     "import pandas as pd\n",
     "import configparser\n",
     "import sqlalchemy \n",
@@ -245,8 +248,12 @@
    "source": [
     "#pip install and imports here\n",
     "%pip install requests\n",
+    "\n",
     "import requests\n",
-    "import csv"
+    "import csv\n",
+    "import pandas as pd\n",
+    "import json \n",
+    "import ast"
    ]
   },
   {
@@ -308,16 +315,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "cptv_pokemon_df = pd.read_csv(\"../data/extended datasets/competitive_df_pokemon.csv\")\n",
     "\n",
-    "competitive_pokemon_df = pd.read_csv(\"../data/extended datasets/competitive_df_pokemon.csv\")\n",
-    "print(competitive_pokemon_df)\n",
     "\n",
     "columns_to_drop = ['hp','atk','def','spa','spd','spe','weight','height','types','abilities']\n",
-    "competitive_pokemon_df = competitive_pokemon_df.drop(columns_to_drop,axis=1)\n",
-    "print(competitive_pokemon_df)\n",
-    "competitive_pokemon_df = competitive_pokemon_df[competitive_pokemon_df['isNonstandard'] != 'CAP']\n",
-    "print(competitive_pokemon_df)"
+    "cptv_pokemon_df = cptv_pokemon_df.drop(columns_to_drop,axis=1)\n",
+    "\n",
+    "\n",
+    "cptv_pokemon_df = cptv_pokemon_df.query('isNonstandard != \"CAP\"')\n",
+    "df_tmp4 = cptv_pokemon_df.copy()\n",
+    "\n",
+    "### Explode the dictionary to retrieve the podex id\n",
+    "df_tmp4[\"oob\"] = df_tmp4[\"oob\"].astype('str')\n",
+    "df_tmp4 = df_tmp4.query('oob != \"nan\"')\n",
+    "\n",
+    "df_tmp4.oob = df_tmp4.oob.apply(eval)\n",
+    "\n",
+    "tmp_col = df_tmp4.oob.apply(pd.Series)\n",
+    "cptv_pokemon_df = pd.concat([\n",
+    "        cptv_pokemon_df.drop('oob',axis=1),\n",
+    "        tmp_col        \n",
+    "        ],\n",
+    "        axis=1)\n",
+    "\n",
+    "cptv_pokemon_df['index'] = cptv_pokemon_df['dex_number'].astype('Int64') - 1\n",
+    "cptv_pokemon_df[\"dex_number\"] = cptv_pokemon_df[\"dex_number\"].astype('Int64').astype('str')\n",
+    "cptv_pokemon_df = cptv_pokemon_df.query('dex_number != \"<NA>\"') \n",
+    "\n",
+    "### \n",
+    "columns_to_drop = [\"isNonstandard\",\"evos\",\"alts\",\"genfamily\"]\n",
+    "cptv_pokemon_df = cptv_pokemon_df.drop(columns_to_drop,axis=1)\n",
+    "cptv_pokemon_df.formats = cptv_pokemon_df.formats.apply(lambda x: x[1:-1].split(',')[0].replace(\"'\",\"\"))\n",
+    "cptv_pokemon_df.drop_duplicates(subset=['dex_number'],inplace=True)\n",
+    "\n",
+    "cptv_pokemon_df.set_index('dex_number',inplace=True)\n",
+    "cptv_pokemon_df.rename(columns={'formats':'tiers'},inplace=True)\n",
+    "\n",
+    "#print(cptv_pokemon_df.formats.apply(type))\n",
+    "print(cptv_pokemon_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Join the competitive data frame to our fact table data frame and train our classification model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(fact_table_df)\n",
+    "print(cptv_pokemon_df)"
    ]
   },
   {
