features and target

--- a/Phase4/DataMining.ipynb
+++ b/Phase4/DataMining.ipynb
@@ -241,6 +241,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# We will be making a classifier that predicts the competitive tier of a given pokemon"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -311,9 +318,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              name         tiers dex_number\n",
+      "index                                      \n",
+      "0        Bulbasaur            LC          1\n",
+      "9         Caterpie  National Dex         10\n",
+      "99         Voltorb            LC        100\n",
+      "999      Gholdengo            OU       1000\n",
+      "1000      Wo-Chien            PU       1001\n",
+      "...            ...           ...        ...\n",
+      "994    Iron Thorns            NU        995\n",
+      "995       Frigibax            LC        996\n",
+      "996       Arctibax           NFE        997\n",
+      "997     Baxcalibur          Uber        998\n",
+      "998     Gimmighoul            LC        999\n",
+      "\n",
+      "[1025 rows x 3 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "cptv_pokemon_df = pd.read_csv(\"../data/extended datasets/competitive_df_pokemon.csv\")\n",
     "\n",
@@ -322,7 +351,7 @@
     "cptv_pokemon_df = cptv_pokemon_df.drop(columns_to_drop,axis=1)\n",
     "\n",
     "\n",
-    "cptv_pokemon_df = cptv_pokemon_df.query('isNonstandard != \"CAP\"')\n",
+    "cptv_pokemon_df.query('isNonstandard != \"CAP\"',inplace=True)\n",
     "df_tmp4 = cptv_pokemon_df.copy()\n",
     "\n",
     "### Explode the dictionary to retrieve the podex id\n",
@@ -348,7 +377,7 @@
     "cptv_pokemon_df.formats = cptv_pokemon_df.formats.apply(lambda x: x[1:-1].split(',')[0].replace(\"'\",\"\"))\n",
     "cptv_pokemon_df.drop_duplicates(subset=['dex_number'],inplace=True)\n",
     "\n",
-    "cptv_pokemon_df.set_index('dex_number',inplace=True)\n",
+    "cptv_pokemon_df.set_index('index',inplace=True)\n",
     "cptv_pokemon_df.rename(columns={'formats':'tiers'},inplace=True)\n",
     "\n",
     "#print(cptv_pokemon_df.formats.apply(type))\n",
@@ -359,7 +388,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Join the competitive data frame to our fact table data frame and train our classification model"
+    "Join the competitive data frame to our fact table data frame and train our classification models"
    ]
   },
   {
@@ -368,8 +397,93 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(fact_table_df)\n",
-    "print(cptv_pokemon_df)"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      index DexEntryKey ContextInfoKey   HP  ATK  DEF  SPATK  SPDEF  SPEED  \\\n",
+      "0         0         1-i     ordinary-i   45   49   49     65     65     45   \n",
+      "1         1         2-i     ordinary-i   60   62   63     80     80     60   \n",
+      "2         2         3-i     ordinary-i   80   82   83    100    100     80   \n",
+      "3         3         4-i     ordinary-i   39   52   43     60     50     65   \n",
+      "4         4         5-i     ordinary-i   58   64   58     80     65     80   \n",
+      "...     ...         ...            ...  ...  ...  ...    ...    ...    ...   \n",
+      "1020   1020     1021-ix    ordinary-ix  125   73   91    137     89     75   \n",
+      "1021   1021     1022-ix    ordinary-ix   90  120   80     68    108    124   \n",
+      "1022   1022     1023-ix    ordinary-ix   90   72  100    122    108     98   \n",
+      "1023   1023     1024-ix   legendary-ix   90   65   85     65     85     60   \n",
+      "1024   1024     1025-ix    mythical-ix   88   88  160     88     88     88   \n",
+      "\n",
+      "      TOTAL          name tiers dex_number  \n",
+      "0       318     Bulbasaur    LC          1  \n",
+      "1       405       Ivysaur   NFE          2  \n",
+      "2       525      Venusaur    NU          3  \n",
+      "3       309    Charmander    LC          4  \n",
+      "4       405    Charmeleon   NFE          5  \n",
+      "...     ...           ...   ...        ...  \n",
+      "1020    590   Raging Bolt    OU       1021  \n",
+      "1021    590  Iron Boulder    UU       1022  \n",
+      "1022    590    Iron Crown    UU       1023  \n",
+      "1023    450     Terapagos  Uber       1024  \n",
+      "1024    600     Pecharunt    UU       1025  \n",
+      "\n",
+      "[1025 rows x 13 columns]\n",
+      "       HP  ATK  DEF  SPATK  SPDEF  SPEED  TOTAL\n",
+      "0      45   49   49     65     65     45    318\n",
+      "1      60   62   63     80     80     60    405\n",
+      "2      80   82   83    100    100     80    525\n",
+      "3      39   52   43     60     50     65    309\n",
+      "4      58   64   58     80     65     80    405\n",
+      "...   ...  ...  ...    ...    ...    ...    ...\n",
+      "1020  125   73   91    137     89     75    590\n",
+      "1021   90  120   80     68    108    124    590\n",
+      "1022   90   72  100    122    108     98    590\n",
+      "1023   90   65   85     65     85     60    450\n",
+      "1024   88   88  160     88     88     88    600\n",
+      "\n",
+      "[1025 rows x 7 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## join our data frames and do preliminary steps for training\n",
+    "\n",
+    "#print(fact_table_df)\n",
+    "#print(cptv_pokemon_df)\n",
+    "dmm_df = fact_table_df.join(cptv_pokemon_df,on='index')#data mining df for our model\n",
+    "\n",
+    "\n",
+    "feature_cols = ['HP','ATK','DEF', 'SPATK' , 'SPDEF'  , 'SPEED', 'TOTAL']\n",
+    "features = dmm_df[feature_cols]\n",
+    "target = dmm_df.tiers\n",
+    "print(dmm_df)\n",
+    "print(features)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Decision tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n"
    ]
   },
   {
